<resources>
    <string name="app_name">demo4ka</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_add_note">Добавить</string>
    <string name="start_label">Что использовать?</string>
    <string name="start_btn_room">ROOM</string>
    <string name="title">Заметки</string>
    <string name="toast_enter_name">Введите имя заметки</string>
    <string name="start_btn_firebase">Firebase</string>
    <string name="email_hint">email</string>
    <string name="password_hint">password</string>
    <string name="start_btn_login">Login</string>
    <string name="toast_wrong_enter">Введите данные</string>
    <string name="btn_add_prb">+</string>
    <string name="counter_text">Людей с такой же проблемой: %s</string>
    <string name="change_note_btn">Изменить</string>
    <string name="edit_note_name">Введите название заметки</string>
    <string name="edit_note_text">Введите текст заметки</string>
    <string name="edit_note_text2">Введите текст заметки</string>
</resources>