<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".screens.edit_note.EditNoteFragment">

    <EditText
        android:id="@+id/input_name_note"
        style="@style/edit_text"
        android:layout_width="374dp"
        android:layout_height="59dp"
        android:autofillHints=""
        android:hint="@string/edit_note_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/input_text_note"
        style="@style/edit_text"
        android:layout_width="383dp"
        android:layout_height="59dp"
        android:autofillHints=""
        android:hint="@string/edit_note_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_name_note"
        tools:ignore="LabelFor" />
    <EditText
        android:hint="@string/edit_note_text2"
        android:visibility="invisible"
        android:layout_width="383dp"
        android:layout_height="59dp"
        android:id="@+id/input_text_note2"
        app:layout_constraintTop_toBottomOf="@id/input_text_note"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="LabelFor"
        style="@style/edit_text"
        android:autofillHints="" />

    <Button
        android:id="@+id/btn_ntplus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:onClick="clickHandlerFunction"
        android:text="Добавить текстовое поле"
        android:textSize="10dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_text_note"
        tools:ignore="MissingConstraints" />

    <Button

        android:id="@+id/btn_edit_note2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_note_btn"
        app:layout_constraintTop_toBottomOf="@id/input_text_note2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/app_margin"
        />



</androidx.constraintlayout.widget.ConstraintLayout>