<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.start.StartFragment">

 <TextView
     android:id="@+id/textView"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_margin="@dimen/app_margin"
     android:fontFamily="casual"
     android:text="Авторизация"
     android:textColor="@color/purple_700"
     android:textSize="@dimen/app_large_text"
     android:textStyle="bold"
     app:layout_constraintBottom_toTopOf="@+id/input_email"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent" />

 <EditText
     android:id="@+id/input_email"
     android:layout_width="@dimen/btn_width"
     android:layout_height="wrap_content"
     android:layout_margin="@dimen/app_margin"
     android:hint="@string/email_hint"
     app:layout_constraintVertical_bias="0.4"
     android:inputType="textEmailAddress"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent" />

 <EditText
     android:id="@+id/input_password"
     android:layout_width="@dimen/btn_width"
     android:layout_height="wrap_content"
     android:layout_margin="@dimen/app_margin"
     android:hint="@string/password_hint"
     android:inputType="textPassword"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@id/input_email" />

 <Button
     android:id="@+id/btn_login"
     android:layout_width="@dimen/btn_width"
     android:layout_height="wrap_content"
     android:layout_marginTop="16dp"
     android:text="@string/start_btn_login"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@id/input_password" />
</androidx.constraintlayout.widget.ConstraintLayout>